--- a/scene 4/package.json
+++ b/scene 4/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@react-three/drei": "^9.41.2",
-    "react": "^18.1.0",
+    "@react-three/fiber": "^8.9.1",
+    "@theatre/core": "^0.5.0",
+    "@theatre/r3f": "^0.5.0",
+    "@theatre/studio": "^0.5.0",
+    "react": "^18.2.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "react-three-fiber": "^6.0.13",
@@ -33,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.146.0"
   }
 }
